ANY-161 - added foggot password
